crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_as_transaction_object_change.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "contents": {
          "extract": {
            "asAddress": {
              "asTransactionObject": {
                "__typename": "ObjectChange",
                "inputState": {
                  "asMoveObject": {
                    "contents": {
                      "json": {
                        "id": "[json_id]",
                        "value": "7"
                      }
                    }
                  }
                },
                "outputState": {
                  "asMoveObject": {
                    "contents": {
                      "json": {
                        "id": "[json_id]",
                        "value": "99"
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
