crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_as_transaction_object_consensus_read.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "contents": {
        "extract": {
          "asAddress": {
            "asTransactionObject": {
              "__typename": "ConsensusObjectRead",
              "object": {
                "asMoveObject": {
                  "contents": {
                    "type": {
                      "repr": "[pkg]::clock::Clock"
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
