crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_sender_filter.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "sender": {
          "address": "[address]"
        },
        "contents": {
          "type": {
            "repr": "[pkg]::emit_test_event::TestEvent"
          }
        }
      }
    }
  }
}
