crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_transaction_fields.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "transaction": {
          "digest": "[digest]",
          "sender": {
            "address": "[address]"
          },
          "kind": {
            "__typename": "ProgrammableTransaction"
          },
          "gasInput": {
            "gasBudget": "5000000000",
            "gasPrice": "1000"
          }
        },
        "contents": {
          "type": {
            "repr": "[pkg]::emit_test_event::TestEvent"
          }
        }
      }
    }
  }
}
